feat: possibilidade de desativar popup Instagram na abertura do aplicativo.